[gd_scene load_steps=10 format=3 uid="uid://dn56hcbavqube"]

[ext_resource type="Script" path="res://scenes/UI_scenes/lobby_menu/multiplayer_lobby.gd" id="1_84gg5"]
[ext_resource type="Texture2D" uid="uid://cinytmjy2vwdc" path="res://assets/objects/menu_bg.png" id="2_6go8h"]
[ext_resource type="Script" path="res://scenes/UI_scenes/lobby_menu/Control.gd" id="2_oo1ne"]
[ext_resource type="PackedScene" uid="uid://borv4gmcqi7gd" path="res://scenes/UI_scenes/lobby_menu/server_info.tscn" id="3_q8aqm"]
[ext_resource type="Theme" uid="uid://ccv006hmeldry" path="res://assets/Default.tres" id="3_ulgph"]
[ext_resource type="Texture2D" uid="uid://cop6w5ml78oji" path="res://assets/objects/ui/back.png" id="5_84lg0"]
[ext_resource type="Texture2D" uid="uid://cmkw43csov3uj" path="res://assets/objects/ui/female.png" id="5_g7esa"]
[ext_resource type="Texture2D" uid="uid://civeu04wwwkx8" path="res://assets/objects/ui/male.png" id="6_u3xcm"]

[sub_resource type="ButtonGroup" id="ButtonGroup_5p84g"]

[node name="multiplayer_lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84gg5")

[node name="MenuBg" type="Sprite2D" parent="."]
modulate = Color(0.301961, 0.301961, 0.301961, 1)
position = Vector2(960.5, 536.5)
scale = Vector2(1.0026, 0.999074)
texture = ExtResource("2_6go8h")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 255.0
offset_right = 641.0
offset_bottom = 347.0
text = "Host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 256.0
offset_right = 899.0
offset_bottom = 345.0
text = "Join"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 1219.0
offset_top = 166.0
offset_right = 1471.0
offset_bottom = 334.0
theme_override_font_sizes/font_size = 28
text = "Start
Game"

[node name="username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 447.0
offset_top = 192.0
offset_right = 897.0
offset_bottom = 239.0
placeholder_text = "Player"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 137.0
offset_right = 599.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 28
text = "Username:"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 184.0
offset_bottom = 96.0
script = ExtResource("2_oo1ne")
serverInfo = ExtResource("3_q8aqm")

[node name="BroadcastTimer" type="Timer" parent="Control"]
wait_time = 0.5

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 862.0
offset_top = 22.0
offset_right = 1260.0
offset_bottom = 78.0
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 317.0
offset_top = 383.0
offset_right = 1606.0
offset_bottom = 855.0

[node name="Titles" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 1287.0
offset_bottom = 40.0

[node name="IP" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Host Name"

[node name="name" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "IP Address"

[node name="PlayerCount" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Players"

[node name="Join" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Join"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 880.0
offset_bottom = 312.0

[node name="ipadd" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 688.0
offset_right = 258.0
offset_bottom = 776.0
theme_override_font_sizes/font_size = 28
text = "Ip"

[node name="female" type="Button" parent="."]
layout_mode = 0
offset_left = 957.0
offset_top = 253.0
offset_right = 1052.0
offset_bottom = 342.0
theme = ExtResource("3_ulgph")
toggle_mode = true
button_group = SubResource("ButtonGroup_5p84g")
icon = ExtResource("5_g7esa")
icon_alignment = 1
expand_icon = true

[node name="male" type="Button" parent="."]
layout_mode = 0
offset_left = 959.0
offset_top = 142.0
offset_right = 1053.0
offset_bottom = 230.0
theme = ExtResource("3_ulgph")
toggle_mode = true
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_5p84g")
icon = ExtResource("6_u3xcm")
expand_icon = true

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 62.0
offset_right = 145.0
offset_bottom = 145.0
theme = ExtResource("3_ulgph")
icon = ExtResource("5_84lg0")
expand_icon = true

[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="timeout" from="Control/BroadcastTimer" to="Control" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="female" to="." method="_on_female_button_down"]
[connection signal="button_down" from="male" to="." method="_on_male_button_down"]
[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
